# Learning

./: .gitignore  CMakeLists.txt  build.sh  encrypt.c  encryptTest.c  makefile
encrypt/: CMakeLists.txt
encrypt/include/: encrypt.h
encrypt/src/: encrypt.c
mStdLibs/: CMakeLists.txt  mMath.c  mMath.h  makefile
mStdLibs/include/: mStdLibs.h
mStdLibs/src/: mMath.c  mString.c
src/: encryptTest.c
