cmake_minimum_required(VERSION 3.12)
set(CMAKE_BUILD_TYPE debug)
project(Learning)
add_subdirectory(encrypt) 
link_libraries(encrypt)
link_libraries(mStdLibs)
include_directories("${PROJECT_SOURCE_DIR}/encrypt/include")
include_directories("${PROJECT_SOURCE_DIR}/mStdLibs/include")
add_executable(encryptTest src/encryptTest.c)